Enable additionalResourceFolders parameter for package install [Co-Authored with Claude Opus 4.6]